force-app/main/default/objects/Prometheion_Alert_Event__e/Prometheion_Alert_Event__e.object-meta.xml
<CustomObject>
    <label>Prometheion Alert Event</label>
    <pluralLabel>Prometheion Alert Events</pluralLabel>
    <fields>
        <fullName>Alert_Id__c</fullName>
        <label>Alert ID</label>
        <type>Text</type>
        <length>50</length>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Text</type>
        <length>50</length>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Text</type>
        <length>50</length>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Alert Title</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Alert Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
</CustomObject>