force-app/main/default/objects/Prometheion_Alert_Event__e/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>